.kustomization/base/manifest/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-betpawa
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 8080
  - name: "heath"
    port: 8090
